Pictures changed and some alignment corrections as well as info updates

--- a/css/base.css
+++ b/css/base.css
@@ -377,7 +377,7 @@ textarea {
  */
 .row {
 	width: 94%;
-	max-width: 1140px;
+	max-width: 1300px;
 	margin: 0 auto;
 }
 
