--- a/css/main.css
+++ b/css/main.css
@@ -1320,12 +1320,15 @@ header .row {
 header .top-bar {
 	display: flex;
 	background: #000000;
-	min-width: 180px;
+	min-width: 150px;
+	max-width: 150px;
 	min-height: 66px;
 	position: absolute;
-	left: 90px;
+	right: 0px;
 	top: 0;
 	justify-content: center;
+	border-radius: 15px;
+	margin-top: 0.75rem;
 }
 
 header .logo {
@@ -1454,6 +1457,7 @@ header .logo a {
 
 /* navigation panel */
 #main-nav-wrap {
+	margin-top: 0.25rem;
 	display: block;
 	width: 100%;
 	font-family: "poppins-medium", sans-serif;
@@ -1465,6 +1469,7 @@ header .logo a {
 
 /* dropdown nav */
 .main-navigation {
+	border-radius: 15px;
 	background: #000000;
 	padding: 24px 30px 42px;
 	margin: 0;
@@ -1557,7 +1562,7 @@ header .logo a {
 	width: 100%;
 	height: 100%;
 	background: #111111;
-	opacity: .85;
+	opacity: .25;
 }
 
 .intro-content {
@@ -1615,8 +1620,16 @@ header .logo a {
 	color: rgba(255, 255, 255, 0.3);
 }
 
+.intro-content .intro-position span:last-child::after {
+	content: "";
+	text-align: center;
+	display: inline-block;
+	padding: 0 14px 0 8px;
+	color: rgba(255, 255, 255, 0.3);
+}
+
 .intro-content .intro-position span:first-child::before {
-	content: "|";
+	content: "";
 	text-align: center;
 	display: inline-block;
 	padding: 0 14px 0 8px;
@@ -1633,11 +1646,15 @@ header .logo a {
 	font-size: 1.3rem;
 	text-transform: uppercase;
 	letter-spacing: .25rem;
+	border-radius: 15px;
+	background-color: #008bcc!important;
 }
 
 .intro-content .button:hover,
 .intro-content .button:focus {
-	border-color: #008bcc;
+	border-color: white;
+	background-color: white!important;
+	color: black!important;
 }
 
 .intro-content .button::after {
@@ -1781,8 +1798,8 @@ header .logo a {
 }
 
 .intro-info img {
-	height: 9rem;
-	width: 9rem;
+	height: 11rem;
+	width: 11rem;
 	border-radius: 50%;
 	margin: .9rem 0 0 0;
 	float: left;
@@ -1848,6 +1865,14 @@ header .logo a {
 
 .button-section [class*="col-"] .button:first-child {
 	margin-right: 4rem;
+	border-radius: 15px;
+	border: 1px solid black;
+}
+
+.button-section [class*="col-"] .button:first-child:hover {
+	background-color: white;
+	color: black;
+	border: 1px solid #008bcc;
 }
 
 /**
@@ -2947,7 +2972,7 @@ footer .footer-social {
 	margin: 0;
 	padding: 0;
 	position: relative;
-	top: -.3rem;
+	top: 0;
 }
 
 footer .footer-social li {
@@ -3017,8 +3042,8 @@ footer .copyright span:last-child::after {
 	text-decoration: none;
 	border: 0 none;
 	display: block;
-	height: 6.6rem;
-	width: 6rem;
+	height: 5rem;
+	width: 5rem;
 	line-height: 6.6rem;
 	text-align: center;
 	background: #008bcc;
@@ -3030,6 +3055,8 @@ footer .copyright span:last-child::after {
 	-webkit-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
+	border-radius: 15px;
+	margin-bottom: 1rem;
 }
 
 #go-top a i {
@@ -3042,3 +3069,4 @@ footer .copyright span:last-child::after {
 }
 
 /*# sourceMappingURL=main.css.map */
+
